--- a/AI Assignment .ipynb
+++ b/AI Assignment .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-ec72bac277be>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpydeck\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpdk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# 2014 location of car accidents in the UK\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mUK_ACCIDENTS_DATA\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'https://raw.githubusercontent.com/uber-common/deck.gl-data/master/examples/3d-heatmap/heatmap-data.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-ec72bac277be>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpydeck\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpdk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m# 2014 location of car accidents in the UK\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mUK_ACCIDENTS_DATA\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'https://raw.githubusercontent.com/uber-common/deck.gl-data/master/examples/3d-heatmap/heatmap-data.csv'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pydeck'"
      ]
     }
@@ -51,16 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +162,7 @@
        "Length: 145, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +193,7 @@
        "3202"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,86 +223,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Blue' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Blue'\n",
-      " 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue'\n",
-      " 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Draw' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue'\n",
-      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue'\n",
-      " 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Blue'\n",
-      " 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Draw' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Draw' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Blue' 'Red' 'Blue' 'Draw' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue'\n",
-      " 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue'\n",
-      " 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue'\n",
-      " 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue'\n",
-      " 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Draw' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Blue' 'Red' 'Red' 'Draw' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Draw' 'Red' 'Blue' 'Red' 'Blue'\n",
-      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Draw' 'Blue' 'Blue' 'Blue' 'Red' 'Draw' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Blue'\n",
-      " 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue'\n",
-      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
-      " 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue'\n",
-      " 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Draw' 'Red' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red'\n",
-      " 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue'\n",
-      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red'\n",
-      " 'Blue' 'Blue' 'Draw' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Blue'\n",
+      "['Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
       " 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue'\n",
-      " 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red'\n",
-      " 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Red' 'Red' 'Blue' 'Red' 'Draw' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red'\n",
-      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
-      " 'Blue' 'Red' 'Red' 'Blue']\n"
+      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Draw' 'Red'\n",
+      " 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue'\n",
+      " 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red'\n",
+      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Draw' 'Blue'\n",
+      " 'Red' 'Red' 'Draw' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Draw' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Draw' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Draw' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Draw' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Red'\n",
+      " 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Draw' 'Blue' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue'\n",
+      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Draw'\n",
+      " 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Draw' 'Blue' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Draw'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Red'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Draw' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Draw' 'Blue' 'Blue'\n",
+      " 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Draw' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Draw'\n",
+      " 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Draw' 'Red'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Draw' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Draw' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Blue'\n",
+      " 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red'\n",
+      " 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Draw'\n",
+      " 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
+      " 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red'\n",
+      " 'Draw' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Blue'\n",
+      " 'Blue' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Draw' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Blue'\n",
+      " 'Red' 'Draw' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red'\n",
+      " 'Blue' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red'\n",
+      " 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Blue' 'Red'\n",
+      " 'Red' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Blue' 'Red' 'Red' 'Red' 'Red' 'Blue' 'Red' 'Blue' 'Blue' 'Red' 'Blue'\n",
+      " 'Red' 'Red' 'Red' 'Blue' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red'\n",
+      " 'Blue' 'Red' 'Blue' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Red' 'Blue'\n",
+      " 'Red' 'Red']\n"
      ]
     }
    ],
@@ -316,6 +317,8 @@
     "    'R_losses',\n",
     "    'B_win_by_KO/TKO',\n",
     "    'R_win_by_KO/TKO',\n",
+    "    'B_win_by_Submission',\n",
+    "    'R_win_by_Submission',\n",
     "    'B_current_win_streak',  \n",
     "    'R_current_win_streak',\n",
     "    'B_current_lose_streak',\n",
@@ -323,7 +326,9 @@
     "    'B_Height_cms',\n",
     "    'R_Height_cms',\n",
     "    'B_Weight_lbs',\n",
-    "    'R_Weight_lbs']].values\n",
+    "    'R_Weight_lbs',\n",
+    "    'B_Reach_cms',\n",
+    "    'R_Reach_cms']].values\n",
     "\n",
     "labels = ufc_train['Winner'].values\n",
     "\n",
@@ -339,6 +344,8 @@
     "    'R_losses',\n",
     "    'B_win_by_KO/TKO',\n",
     "    'R_win_by_KO/TKO',\n",
+    "    'B_win_by_Submission',\n",
+    "    'R_win_by_Submission',\n",
     "    'B_current_win_streak',  \n",
     "    'R_current_win_streak',\n",
     "    'B_current_lose_streak',\n",
@@ -346,9 +353,95 @@
     "    'B_Height_cms',\n",
     "    'R_Height_cms',\n",
     "    'B_Weight_lbs',\n",
-    "    'R_Weight_lbs']].values\n",
+    "    'R_Weight_lbs',\n",
+    "    'B_Reach_cms',\n",
+    "    'R_Reach_cms']].values\n",
     "\n",
-    "print(clf.predict(test_features))"
+    "predicted_values = clf.predict(test_features)\n",
+    "print(predicted_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving real values below and predicted values above.\n",
+    "real_values = ufc_test['Winner'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if the predicted is equal to the real values.\n",
+    "np.array_equal(real_values,predicted_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check all values one by one. True = prediction was correct and False = prediction failed.\n",
+    "check = (real_values == predicted_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "800"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total amount of values.\n",
+    "check.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "439"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Amount of values predicted correctly out of 800.\n",
+    "np.count_nonzero(check)"
    ]
   },
   {
