Update AI Assignment .ipynb

--- a/AI Assignment .ipynb
+++ b/AI Assignment .ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Jason Thai 101107083\n",
-    "## Hristo Tsvetkov 100719969\n",
-    "## Steeven Orell Wemin 101091788"
+    "## Jason",
+    "## Hristo",
+    "## Steeven"
    ]
   },
   {
